--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
         <div class="about-right">
             <img src="./img/Video.jpg">
         </div>
-        <!-- <div class="img-about-mobie">
-            <img src="./img/Background.jpg">
-        </div> -->
+        <div class="about1">
+            <button style="margin-top: 40px;background-color:#f1d5dd9f; border-radius: 5px;color: #EC80A0;">SPRCICAL PRICE</button>
+            <P>bring exciting moments
+                of fun while playing &
+                learning for children.
+            </P>
+            <button style="margin-top: 10px; color: #ffffff; font-size: 20px;padding: 12px 28px;">CONTACT US</button>
+        </div>
         </div>
         <div class="Proud-of">
             <h1>What We Are Proud Of.</h1>
